--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -14,6 +14,11 @@
         tools:context="com.example.android.myinventory.CatalogActivity"
         android:background="#757575">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView"/>
+
     <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
