--- a/app/src/main/res/menu/menu_catalog.xml
+++ b/app/src/main/res/menu/menu_catalog.xml
@@ -14,4 +14,11 @@
         android:title="@string/action_delete_all_items"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_add_new_item"
+        android:icon="@drawable/ic_add_circle_black_24dp"
+        android:title="@string/action_add_a_new_item"
+        app:showAsAction="always"
+        />
+
 </menu>
