--- a/app/src/main/res/menu/menu_editor.xml
+++ b/app/src/main/res/menu/menu_editor.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/action_save"
         android:title="@string/action_save"
-        android:icon="@drawable/ic_action_name"
+        android:icon="@drawable/ic_save_black_24dp"
         app:showAsAction="always"/>
 
     <item
