--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#BDBDBD">
+    android:background="#BDBDBD"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -13,16 +13,15 @@
         android:layout_weight="8">
 
         <ImageView
-            android:id="@+id/imageEditView"
+            android:id="@+id/imageView"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:scaleType="centerCrop"
-            tools:src="@mipmap/ic_launcher" />
+            tools:src="@drawable/default_image" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            android:layout_toRightOf="@id/imageEditView"
+            android:layout_toRightOf="@id/imageView"
             android:orientation="vertical"
             android:padding="8dp">
 
@@ -43,11 +42,11 @@
 
                 <TextView
                     android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="2"
-                    android:text="₹"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     android:gravity="center"
-                    android:layout_height="match_parent" />
+                    android:text="₹"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
                 <EditText
                     android:id="@+id/priceEditText"
@@ -55,9 +54,9 @@
                     android:layout_height="match_parent"
                     android:layout_below="@id/nameEditText"
                     android:layout_weight="8"
-                    android:padding="8dp"
                     android:hint="Price"
-                    android:inputType="numberDecimal" />
+                    android:inputType="numberDecimal"
+                    android:padding="8dp" />
 
             </LinearLayout>
 
@@ -76,7 +75,7 @@
             android:id="@+id/supplierNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/imageEditView"
+            android:layout_below="@id/imageView"
             android:layout_marginBottom="16dp"
             android:layout_marginTop="16dp"
             android:hint="Supplier Name"
@@ -88,8 +87,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginBottom="16dp"
             android:layout_below="@+id/supplierNameEditText"
+            android:layout_marginBottom="16dp"
             android:hint="Supplier Contact No."
             android:inputType="phone"
             android:padding="8dp" />
@@ -100,8 +99,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/supplierPhoneEditText"
             android:hint="How many items to order?"
-            android:visibility="gone"
-            android:padding="8dp" />
+            android:padding="8dp"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
